hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: hello
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: prod
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-ingress-class: "public"
spec:
  rules:
   - host: hello.lesquerra.cat
     http:
       paths:  
        - backend:
            serviceName: hello
            servicePort: 80
  tls:
  - hosts:
    - hello.lesquerra.cat
    secretName: tlssecret
